Add chinese menu to menu page

--- a/public/locales/ch/translation.json
+++ b/public/locales/ch/translation.json
@@ -5,6 +5,7 @@
   "browseMenuBt": "瀏覽菜單",
   "menu": "菜單",
   "cart": "購物車",
+  "readMore": "瞭解更多...",
   "yourCart": "你的購物車",
   "priceIcon": "NTD",
   "delete": "刪除",
