--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,6 +5,7 @@
   "browseMenuBt": "Browse the Menu",
   "menu": "Menu",
   "cart": "Cart",
+  "readMore": "read more...",
   "yourCart": "Your Cart",
   "priceIcon": "£",
   "delete": "Delete",
