Fix bug: Add bilingual error message in home page

--- a/public/locales/ch/translation.json
+++ b/public/locales/ch/translation.json
@@ -1,6 +1,7 @@
 {
   "login": "登入",
   "tableNumber": "請輸入桌號",
+  "tableNumberErrorMessage": "請輸入正確的桌號😓",
   "continueBt": "繼續",
   "browseMenuBt": "瀏覽菜單",
   "menu": "菜單",
